# tuf-aura-control

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  pyproject.toml
packaging/: tuf-aura-control-shutdown-off.service  tuf-aura-control.desktop
tuf_aura_control/: __init__.py  app.py  backend.py  config.py  cycle.py  cycle_daemon.py  state.py  theme.py  ui.py  widgets.py
